src/CS_App.css
body {
    margin: 0;
    text-align: center;

    font-size: 1.05em;
    font-family:'Gill Sans', 'Gill Sans MT', Tahoma, sans-serif;
    
    

}

button {
  font-family:'Trebuchet MS';
  font-size: 0.8em;
  display: inline-block;
  width: 7em;
  height: 2.75em;
  font-weight: bold;
  transition: 0.25s;
  border-radius: 5px;

}

button:hover {
  cursor: pointer;
  background-color: rgba(255, 218, 26, 1);
}

.prompt {
  opacity: 85%;
  background-color: white;
  width: 35%;
  padding: 1em 2em 1em 2em;
  min-width: 280px;
  
}

.red {
  color: red;
}

